--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0 1rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -17,6 +17,17 @@ code {
     monospace;
 }
 
+.centered {
+  position: absolute;
+  color: aliceblue;
+  filter: brightness(100%);
+  text-decoration: underline;
+  text-decoration-thickness: 6%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 input {
   color-scheme: dark;
 }
@@ -32,12 +43,12 @@ input {
   display: flex;
   align-content: space-around;
   flex-direction: column;
+  /* margin-left: 3rem; */
 }
 
 .logo-link {
   font-size: 1.5rem;
   font-weight: 50;
-  margin: 0 5px;
   text-decoration: none;
   color: aliceblue;
 }
@@ -54,17 +65,6 @@ input {
   display: flex;
   align-content: flex-end;
   justify-content: space-between;
-}
-
-.centered {
-  position: absolute;
-  color: aliceblue;
-  filter: brightness(100%);
-  text-decoration: underline;
-  text-decoration-thickness: 6%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .main-image {
@@ -89,6 +89,15 @@ input {
   border: 2px solid aliceblue;
 }
 
+.welcome-text {
+  position: absolute;
+  text-decoration: underline;
+  color: aliceblue;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .book-button:hover {
   background-color: white;
   color: black;
@@ -108,6 +117,14 @@ footer {
   text-align: center;
 }
 
-#noOfPeople {
-  text-align: center;
+@media only screen and (max-device-width: 768px) {
+  .centered {
+    top: 30%;
+  }
+}
+
+@media all and (min-device-width: 768px) and (orientation: portrait) {
+  .centered {
+    top: 30%;
+  }
 }
